Blackpurl/src/objects/Unit_Price_Cost__c.object
<CustomObject>
    <fields>
        <fullName>AccountingId__c</fullName>
        <label>AccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingResponse__c</fullName>
        <label>AccountingResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO_Invoice_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Co Invoice Header</description>
        <label>CO Invoice Header</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>Unit Prices &amp; Costs</relationshipLabel>
        <relationshipName>Unit_Prices_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Cost of unit</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Owned_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unit lookup with Customer Owned Unit</description>
        <label>Customer Owned Unit</label>
        <referenceTo>Customer_Owned_Unit__c</referenceTo>
        <relationshipLabel>Unit Prices &amp; Costs</relationshipLabel>
        <relationshipName>Unit_Prices_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <description>Description of unit</description>
        <label>Item/Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Count__c</fullName>
        <label>Max Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Price of unit</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profilt_Percentage__c</fullName>
        <description>Profilt Percentage  = (Total Price - Total Cost)/Total Price

This field is not be used</description>
        <formula>IF( $Setup.Configurations__c.Tax_Included_Pricing__c , 
((( Total_Price__c / ( 1 + Customer_Owned_Unit__r.Applicable_Tax__r.Rate__c ) ) - Total_Cost__c) / ( Total_Price__c / ( 1 + Customer_Owned_Unit__r.Applicable_Tax__r.Rate__c ) )), 
((  Total_Price__c  -  Total_Cost__c  )  /  Total_Price__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profilt Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Profit_Amount__c</fullName>
        <description>Profit amount is difference of total price and total cost</description>
        <formula>IF( $Setup.Configurations__c.Tax_Included_Pricing__c , 
(( Total_Price__c / ( 1 + Customer_Owned_Unit__r.Applicable_Tax__r.Rate__c ) ) - Total_Cost__c), 
(Total_Price__c - Total_Cost__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit_Percentage__c</fullName>
        <description>Profit Percentage  = (Total Price - Total Cost)/Total Price</description>
        <formula>IF( $Setup.Configurations__c.Tax_Included_Pricing__c , 
((( Total_Price__c / ( 1 + Customer_Owned_Unit__r.Applicable_Tax__r.Rate__c ) ) - Total_Cost__c) / ( Total_Price__c / ( 1 + Customer_Owned_Unit__r.Applicable_Tax__r.Rate__c ) )), 
((  Total_Price__c  -  Total_Cost__c  )  /  Total_Price__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <description>Quantity of unit</description>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ref_No__c</fullName>
        <description>Reference to unit</description>
        <label>Ref No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Ordered_Unit_Price_Cost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Ordered Unit Price Cost</label>
        <referenceTo>Unit_Price_Cost__c</referenceTo>
        <relationshipLabel>Unit Prices &amp; Costs</relationshipLabel>
        <relationshipName>Unit_Prices_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Service order line item - one to one relationship</description>
        <label>Service Order Line Item</label>
        <referenceTo>Service_Order_Line_Item__c</referenceTo>
        <relationshipLabel>Unit Prices &amp; Costs</relationshipLabel>
        <relationshipName>Unit_Prices_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <label>SyncToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Total cost of unit</description>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Total price of unit</description>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Base unit, Factory options, Dealer installed options</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Factory</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <formula>TEXT(Customer_Owned_Unit__r.Unit_Type__c)</formula>
        <label>Unit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <label>accountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>availForQBSync</label>
        <type>Checkbox</type>
    </fields>
    <label>Unit Price &amp; Cost</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Unit_Price_and_Costs</fullName>
        <columns>NAME</columns>
        <columns>CO_Invoice_Header__c</columns>
        <columns>Customer_Owned_Unit__c</columns>
        <columns>Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBSync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Unit Price and Costs</label>
    </listViews>
    <nameField>
        <displayFormat>UNP-{00000000}</displayFormat>
        <label>Unit Price &amp; Cost Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Prices &amp; Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>